Adjusted website for mobile viewing and made minor grammatical revisions.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
               <h2>Anthony Belza</h2>
               <p class="title">NHL S/C Coach</p>
-              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and Montréal Candiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
+              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and Montréal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
               <p>E: a.belza@mail.utoronto.ca</p>
             </div>
           </div>
@@ -66,7 +66,7 @@
             <div class="container">
               <h2>Steven Hirsch</h2>
               <p class="title">Sport Biomechanist</p>
-              <p>Steven has worked as a private Strength and Conditioning Coach for various high-level athletes. He currently works as a Sport Biomechanist and consults on motion tracking technologies for tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
+              <p>Steven has worked as a private Strength and Conditioning Coach for various high-level athletes. He currently works as a Sport Biomechanist and as a consultant for tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
               <p>E: steven.hirsch@mail.utoronto.ca</p>
             </div>
           </div>
