--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   <body>
     <div class='mainLanding'>
       <div class='centered'>
-        <h1> Movement Variability in S&C </h1>
-        <h3> Feb. 12, 2022 - Feb 13, 2022 </h3>
+        <h1> How to Assess and Promote Movement Variability in Practice </h1>
+        <h3> Saturday, February 12, 2022 </h3>
         <a href="https://buy.stripe.com/7sI9BUbRr7Ad0gw4gg" class='button'> Register Now </a>
       </div>
     </div>
 
     <div class='section2'>
       <h2> Why attend this seminar?</h2>
-      <p class = 'text'> How specific should assessments and training be to transfer to sport? Which measures of fitness, coordination, and variability are you using to inform training? How are you integrating motor learning principles in your assessments and program design?</p>
-      <p class= 'text'> Answers to these questions, and much more, will be expanded upon across two days of information-packed, live webinars. </p>
+      <p class = 'text'> How specific should assessments and training be to transfer to sport?</p>
+      <p class = 'text'> Which measures of fitness, coordination, and variability are you using to inform training?</p>
+      <p class='text'> How are you integrating motor learning principles in your assessments and program design?</p>
+      <p class= 'text'> Answers to these questions, and much more, will be expanded upon in live lectures and Q&As! </p>
     </div>
 
     <div class="section3">
@@ -26,20 +28,20 @@
 
       <div class="boxes">
         <div class="box1">
-            <h3> Dynamical Systems Theory </h3>
-            <p> Learn the basics about Dynamical Systems Theory (DST), the Constraints-Led Approach (CLA), and Differential Learning. </p>
+            <h3> Dynamical Systems Theory</h3>
+            <p> Learn the basics about Dynamical Systems Theory (DST), the Constraints-Led Approach (CLA), and Differential Learning.</p>
         </div>
         <div class="box2">
-            <h3> General Movement Assessment Overview </h3>
-            <p> What are some pros and cons of existing movement assessments?  </p>
+            <h3> General Movement Assessment Overview</h3>
+            <p> What are pros and cons of existing movement assessments?</p>
         </div>
         <div class="box3">
-            <h3> Assessing and Programming Movement Variability </h3>
-            <p> How do we assess and interpret movement variability? How can we then enhance movement variability during training?  </p>
+            <h3> Assessing and Programming Movement Variability</h3>
+            <p> How do we assess and interpret movement variability? How can we then enhance movement variability during training?</p>
         </div>
         <div class="box3">
-            <h3>Designing your own Assessments and Programs </h3>
-            <p> Learn how to integrate and apply theoretical and empirical information in practice.  </p>
+            <h3>Designing your own Assessments and Programs</h3>
+            <p> Learn how to integrate and apply theoretical and empirical information in practice.</p>
         </div>
       </div>
 
@@ -53,7 +55,7 @@
             <img src="img/anthonybelza.jpg" alt="Anthony" style="width:100%">
             <div class="container">
               <h2>Anthony Belza</h2>
-              <p class="title">NHL S/C Coach</p>
+              <p class="title">NHL S&C Coach</p>
               <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and Montréal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
               <p>E: a.belza@mail.utoronto.ca</p>
             </div>
@@ -66,7 +68,7 @@
             <div class="container">
               <h2>Steven Hirsch</h2>
               <p class="title">Sport Biomechanist</p>
-              <p>Steven has worked as a private Strength and Conditioning Coach for various high-level athletes. He currently works as a Sport Biomechanist and as a consultant for tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
+              <p>Steven has worked as a private Strength and Conditioning Coach for various elite athletes. He currently works as a Sport Biomechanist and as a consultant for exercise tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
               <p>E: steven.hirsch@mail.utoronto.ca</p>
             </div>
           </div>
