--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Movement Variability in S&C</title>
+    <title>How to Assess and Promote Movement Variability</title>
   </head>
   <body>
     <div class='mainLanding'>
       <div class='centered'>
-        <h1> How to Assess and Promote Movement Variability in Practice </h1>
-        <h3> Saturday, February 12, 2022 </h3>
-        <a href="https://buy.stripe.com/7sI9BUbRr7Ad0gw4gg" class='button'> Register Now </a>
+        <h1> How to Assess and Promote Movement Variability</h1>
+        <h3> Saturday, February 12, 9am-4pm </h3>
+        <a href="https://buy.stripe.com/7sIeWecVv8EhbZe001" class='button' target="_blank"> Register Now </a>
       </div>
     </div>
 
     <div class='section2'>
       <h2> Why attend this seminar?</h2>
-      <p class = 'text'> How specific should assessments and training be to transfer to sport?</p>
-      <p class = 'text'> Which measures of fitness, coordination, and variability are you using to inform training?</p>
-      <p class='text'> How are you integrating motor learning principles in your assessments and program design?</p>
-      <p class= 'text'> Answers to these questions, and much more, will be expanded upon in live lectures and Q&As! </p>
+      <p class = 'text'>How "specific" should movement assessments and exercise be to transfer to sport?</p>
+      <p class = 'text'>Which measures of fitness, coordination, and variability are you using to inform exercise selection?</p>
+      <p class='text'>How are you integrating motor learning principles in your assessments and program design?</p>
+      <p class= 'text'>Answers to these questions, and much more, will be expanded upon in live lectures and Q&As over Zoom! </p>
     </div>
 
     <div class="section3">
@@ -56,7 +56,7 @@
             <div class="container">
               <h2>Anthony Belza</h2>
               <p class="title">NHL S&C Coach</p>
-              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and Montréal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
+              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and as a Player Development Consultant for the Montréal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
               <p>E: a.belza@mail.utoronto.ca</p>
             </div>
           </div>
@@ -68,7 +68,7 @@
             <div class="container">
               <h2>Steven Hirsch</h2>
               <p class="title">Sport Biomechanist</p>
-              <p>Steven has worked as a private Strength and Conditioning Coach for various elite athletes. He currently works as a Sport Biomechanist and as a consultant for exercise tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
+              <p>Steven has worked as a private Strength and Conditioning Coach for various hockey, football, badminton, track and field, and weightlifting athletes. He currently works as a Sport Biomechanist and as a consultant for exercise tech companies. Steven is a Ph.D. Candidate at the University of Toronto.</p>
               <p>E: steven.hirsch@mail.utoronto.ca</p>
             </div>
           </div>
@@ -79,11 +79,11 @@
     </div>
 
     <div class="section5">
-      <a href="https://buy.stripe.com/7sI9BUbRr7Ad0gw4gg" class='button2'> Sign Up Today! </a>
+      <a href="https://buy.stripe.com/7sIeWecVv8EhbZe001" class='button2' target="_blank"> Sign Up Today! </a>
     </div>
 
     <div class="section6">
-      <p>This webpage is hosted on <a href="https://github.com/stevenhirsch/Movement-Variability-Seminar">GitHub</a> and built by <a href="https://github.com/stevenhirsch">stevenhirsch</a>.</p>
+      <p>This webpage (and code) is hosted on <a href="https://github.com/stevenhirsch/Movement-Variability-Seminar">GitHub</a> and was built by <a href="https://github.com/stevenhirsch">stevenhirsch</a>.</p>
     </div>
 
   </body>
