fixed text in bio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="container">
               <h2>Anthony Belza</h2>
               <p class="title">NHL S&C Coach</p>
-              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and as a Player Development Consultant for the Montréal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
+              <p>Anthony has worked as the Head Strength and Conditioning Coach for the Toronto Maple Leafs and as a Player Development Consultant for the Montreal Canadiens. He currently trains professional hockey players privately and is a Ph.D. Student in Biomechanics at the University of Toronto.</p>
               <p><a href='mailto:a.belza@mail.utoronto.ca'>Contact Anthony</a></p>
             </div>
           </div>
