added virtual tag to main landing page.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class='mainLanding'>
       <div class='centered'>
         <h1> How to Assess and Promote Movement Variability</h1>
-        <h3> Saturday, February 12, 9am-4pm </h3>
+        <h3> Saturday, February 12, 9am-4pm (Virtual)</h3>
         <a href="https://buy.stripe.com/7sIeWecVv8EhbZe001" class='button' target="_blank"> Register Now </a>
       </div>
     </div>
