--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class='mainLanding'>
       <div class='centered'>
         <h1> How to Assess and Promote Movement Variability</h1>
-        <h3> Saturday, February 12, 9am-4pm (Virtual)</h3>
+        <h3> Saturday, March 19, 9am-4pm (Via Zoom)</h3>
         <a href="https://buy.stripe.com/7sIeWecVv8EhbZe001" class='button' target="_blank"> Register Now </a>
       </div>
     </div>
 
     <div class='section2'>
       <h2> Why attend this seminar?</h2>
-      <p class = 'text'>How "specific" should movement assessments and exercise be to transfer to sport?</p>
-      <p class = 'text'>Which measures of fitness, coordination, and variability are you using to inform exercise selection?</p>
-      <p class='text'>How are you integrating motor learning principles in your assessments and program design?</p>
+      <p class = 'text'>How should we assess movement to promote maximal transfer to sport?</p>
+      <p class = 'text'>How can we periodize skill acquisition and movement variability concurrently with fitness?</p>
+      <p class='text'>How are you integrating motor learning principles in your coaching practices?</p>
       <p class= 'text'>Answers to these questions, and much more, will be expanded upon in live lectures and Q&As over Zoom! </p>
     </div>
 
@@ -29,11 +29,11 @@
       <div class="boxes">
         <div class="box1">
             <h3> Dynamical Systems Theory</h3>
-            <p> Learn the basics about Dynamical Systems Theory (DST), the Constraints-Led Approach (CLA), and Differential Learning.</p>
+            <p> Learn the basics about Dynamical Systems Theory (DST) and the Constraints-Led Approach (CLA).</p>
         </div>
         <div class="box2">
             <h3> General Movement Assessment Overview</h3>
-            <p> What are pros and cons of existing movement assessments?</p>
+            <p> What are pros and cons of existing movement assessments? How can we do better?</p>
         </div>
         <div class="box3">
             <h3> Assessing and Programming Movement Variability</h3>
